<resources>
    <string name="app_name">Safarnama</string>
    <string name="menu_1">Wander</string>
    <string name="menu_2">Nearby</string>
    <string name="menu_3">Buddies</string>
    <string name="menu_4">Feed</string>
    <string name="menu_5">Journey</string>
    <string name="menu_6">Delicacies</string>
    <string name="menu_7">Explore</string>
    <string name="menu_8">Inspiration</string>
    <string name="support_email">strongtieschannel@gmail.com</string>
    <string name="support_sub">Support Email from Safarnama - </string>
    <string name="support_title">Contacting Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="mode_light">Light Mode</string>
    <string name="mode_dark">Dark Mode</string>
    <string name="contact_title">Contact Us - Submit through Email</string>
    <string name="contact_msg">Type Suggestions, Feedbacks or Errors</string>
    <string name="contact_submit">Submit</string>
    <string name="logout">Log Out</string>
    <string name="get_loc_check">Location Check</string>
    <string name="get_loc_msg">Application Needs location access. Kindly enable it.</string>
    <string name="menu1_dialoge_name">Name :</string>
    <string name="menu1_dialoge_type">Type :</string>
    <string name="menu1_dialoge_lat">Latitude:</string>
    <string name="menu1_dialoge_lon">Longitude:</string>
    <string name="menu1_dialoge_desc">Description :</string>
    <string name="menu1_dialoge_info">Information</string>
    <string name="BucketList">Bucket List</string>
    <string name="Explore">Explore</string>
    <string name="Accomplished">Accomplished</string>
    <string name="give_permission">Grant Permission</string>
    <string name="placename">Place Name</string>
    <string name="location">Location</string>
    <string name="district">District</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="dateadded">Added On </string>
    <string name="daterequested">Requested On </string>
    <string name="wishlist">Bucketlist</string>
    <string name="accomplished">Accomplished</string>
    <string name="confirm">Confirmation</string>
    <string name="leave_msg">Do you want to exit the application ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="requested">Requested</string>
    <string name="friend">Friend</string>
    <string name="list">list</string>
    <string name="search">Search</string>
    <string name="error_fetching">Error Fetching Data</string>
    <string name="okay">Okay</string>
    <string name="badge">Badge</string>
    <string name="done">Done</string>
    <string name="save_changes">Save Changes</string>
    <string name="upload_profile_img">Upload Profile Image</string>
    <string name="provide_email">Enter Email Address</string>
    <string name="friend_search">Find Your Buddies</string>
    <string name="friend_requests">Buddy Requests</string>
    <string name="friend_list">My Buddies</string>
    <string name="friend_request_send">Send Buddy Request</string>
    <string name="friend_request_success">Buddy Request Sent</string>
    <string name="friend_request_pending">Buddy Request is Pending</string>
    <string name="friend_request_fail">Failed to send Buddy Request</string>
    <string name="friend_request_approve">Be Buddies</string>
    <string name="friends_placeholder">Add some buddies to show them here and on Map</string>
    <string name="friend_request_already_accepted">You are already Buddies</string>
    <string name="friend_request_self">You cannot be your own Buddy</string>
    <string name="friend_request_dismiss">Not Interested</string>
    <string name="friend_accepted">Great! You\'ve added a new buddy</string>
    <string name="friend_failed">Buddy Registration failed.</string>
    <string name="friend_rejected">Buddy Request Rejected</string>
    <string name="friend_unfriend">Remove Buddy</string>
    <string name="friend_add">Add Buddies</string>
    <string name="friend_unfriend_msg">Removed from Buddies</string>
    <string name="friend_reunfriend_msg">Already Removed from Buddies</string>
    <string name="friend_map">Buddies Locations</string>
    <string name="wishlistadd">Added to Bucket List</string>
    <string name="wishlistin">In Bucket List</string>
    <string name="wishlistreadd">Already in Bucket List</string>
    <string name="wishlistremove">Removed from Bucket List</string>
    <string name="wishlistreremove">Not in Bucket List</string>
    <string name="wishlistremove_confirmation_msg">Are you sure you want to remove this place from your Bucket List?</string>
    <string name="accomplishlistadd">Added to Accomplished</string>
    <string name="accomplishlistin">In Accomplished</string>
    <string name="accomplishlistreadd">Already in Accomplished</string>
    <string name="accomplishlistremove">Removed from Accomplished</string>
    <string name="accomplishlistreremove">Not in Accomplished</string>
    <string name="accomplishlistremove_confirmation_msg">Are you sure you want to remove this place from your Accomplished List?</string>
    <string name="show_all">Showing all Places</string>
    <string name="show_all_void">There are no places</string>
    <string name="show_new">Showing New Places to Visit</string>
    <string name="show_new_void">There are no new places to visit</string>
    <string name="show_bucket">Showing Places in Bucket List</string>
    <string name="show_bucket_void">Add some places in Bucket List</string>
    <string name="show_accomplished">Showing Visited Places</string>
    <string name="show_accomplished_void">Add some places in Accomplished List</string>
    <string name="collection_users">Users</string>
    <string name="collection_user_locations">User Locations</string>
    <string name="collection_relations">User Relations</string>
    <string name="collection_friendlist">Friend list</string>
    <string name="collection_requestlist">Request list</string>
    <string name="collection_requestedlist">Requested list</string>
    <string name="collection_landmarks">Landmarks</string>
    <string name="collection_feed">Feed</string>
    <string name="collection_posts">posts</string>
    <string name="document_global">global</string>
    <string name="collection_stats">Stats</string>
    <string name="collection_lists">Lists</string>
    <string name="document_accomplished">Accomplished</string>
    <string name="document_bucketlist">Bucket List</string>
    <string name="collection_fcm_tokens">Firebase Tokens</string>
    <string name="collection_maintainance">Maintenance</string>
    <string name="document_version">Version</string>
    <string name="i_circle">\u24D8</string>
    <string name="i_star1">\u2605</string>
    <string name="i_star2">\u2730</string>
    <string name="inside_5">Inside 5 KM</string>
    <string name="inside_40">Inside 40 KM</string>
    <string name="inside_100">Inside 100 KM</string>
    <string name="inside_200">Inside 200 KM</string>
    <string name="above_200">Above 200 KM</string>
    <string name="profile">Your Profile</string>
    <string name="text_placeholder">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="text_placeholder_short">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </string>
    <string name="feed_insert">New Post</string>
    <string name="feed_insert_body">Write your Mind !</string>
    <string name="post">Post</string>
    <string name="post_success">Posted Successfully</string>
    <string name="feed_msg_accomplished">"Today I completed my visit to "</string>
    <string name="category1">Dams &amp; Water Reservoirs</string>
    <string name="category2">Education &amp; History</string>
    <string name="category3">Garden &amp; Parks</string>
    <string name="category4">Hills &amp; Caves</string>
    <string name="category5">Iconic Places</string>
    <string name="category6">Nature &amp; Wildlife</string>
    <string name="category7">Port &amp; Sea Beach</string>
    <string name="category8">Religious Sites</string>
    <string name="category9">Waterbodies</string>
    <string name="category10">Zoos &amp; Reserves</string>
    <string name="avatar_0">0 Star</string>
    <string name="avatar_0_lvl">Path Finder \u2606</string>
    <string name="avatar_0_text">Path Finder</string>
    <string name="avatar_1">1 Star</string>
    <string name="avatar_1_lvl">Occasional \u2B50</string>
    <string name="avatar_1_text">Occasional</string>
    <string name="avatar_2">2 Star</string>
    <string name="avatar_2_lvl">Curious \u2605 \u2605</string>
    <string name="avatar_2_text">Curious</string>
    <string name="avatar_3">3 Star</string>
    <string name="avatar_3_lvl">Thrill Seeker \u2B50 \u2B50 \u2B50</string>
    <string name="avatar_3_text">Thrill Seeker</string>
    <string name="avatar_4">4 Star</string>
    <string name="avatar_4_lvl">Adventurer \u2B50 \u2B50 \u2B50 \u2B50</string>
    <string name="avatar_4_text">Adventurer</string>
    <string name="avatar_5">5 Star</string>
    <string name="avatar_5_lvl">Wanderer \u2B50 \u2B50 \u2B50 \u2B50 \u2B50</string>
    <string name="avatar_5_text">Wanderer</string>
    <string name="avatar_dev">Developer</string>
    <string name="avatar_dev_lvl">\u272d Developer \u272d</string>
    <string name="avatar_dev_text">Developer</string>
    <string name="badge_progress_singular"> place more to get to the next badge</string>
    <string name="badge_progress_plural"> places more to get to the next badge</string>
    <string name="avatar_5_congratulations">Congratulations on being a Wanderer</string>
    <string name="error_permission_map">Error Getting Location Data</string>
    <string name="change_success">Update Successful</string>
    <string name="back">Back</string>
    <string name="public_feed">Public Feed</string>
    <string name="buddy_feed">Buddy Feed</string>
    <string name="view_on_map">View on Map</string>
    <string name="category">Category</string>
    <string name="city">City</string>
    <string name="fee">Entry Fee</string>
    <string name="description_short">To Sum Up</string>
    <string name="state">State</string>
    <string name="history">Did you know ?</string>
    <string name="moments">Moments</string>
    <string name="viewmore">View More</string>
    <string name="details">Details</string>
    <string name="custom_search">Custom Search</string>
    <string name="custom_search_body">Search the places near you based on the distance in between.</string>
    <string name="custom_search_min">Minimum Distance (KM)</string>
    <string name="custom_search_max">Maximum Distance (KM)</string>
    <string name="select_image">Attach Image</string>
    <string name="profile_name_change">Profile Name Change</string>
    <string name="profile_new_name">Enter New Profile Name</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="select_image_dp">Click on Image</string>
</resources>