<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    >
    

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/feed_insert"
            android:textColor="@color/textItemMenu"
            android:textSize="20dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/post_sel_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_bg_colored"
            android:padding="10dp"
            android:text="@string/select_image"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/post_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/post_sel_img"
            android:layout_marginTop="20dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/feed_insert_text"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/post_sel_img"
            android:layout_toEndOf="@id/post_img"
            android:hint="@string/feed_insert_body"
            android:padding="10dp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/post_type_text_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/type_text_radio1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/public_feed" />

                <RadioButton
                    android:id="@+id/type_text_radio2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/buddy_feed" />


            </RadioGroup>

            <Button
                android:id="@+id/feed_post_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/dialog_bg_colored"
                android:text="@string/post"
                android:textColor="@color/white" />

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>