<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/dialog_bg"
    >
    

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/friend_search"
            android:textSize="20dp"
            android:textColor="@color/textItemMenu"
            android:layout_height="match_parent"/>

    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/friend_search_email"
        android:layout_marginTop="20dp"
        android:hint="@string/provide_email"
        android:padding="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/search_btn"
            android:text="@string/search"
            android:background="@drawable/dialog_bg_colored"
            android:textColor="@color/white"/>
    </LinearLayout>


</LinearLayout>