<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="30dp"
    android:background="@drawable/dialog_bg">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/dialog_dp_change_iv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/loading_image" />

    <TextView
        android:id="@+id/dialog_dp_change_iv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_dp_change_iv"
        android:layout_centerHorizontal="true"
        android:text="@string/select_image_dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_dp_change_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_dp_change_iv_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/dialog_bg"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/save_changes"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_dp_change_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_dp_change_save_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/cancel" />


</RelativeLayout>